// Generate cmd: protoc --go_out=plugins=grpc:. types.proto
syntax = "proto3";

package types;


// Types definitions for HyperContainer
message ContainerPort {
    string name         = 1;
    int32 hostPort      = 2;
    int32 containerPort = 3;
    string protocol     = 4;
    string hostIP       = 5;
}

message EnvironmentVar {
    string env    = 1;
    string value  = 2;
}

message VolumeMount {
    string name       = 1;
    string mountPath  = 2;
    bool readOnly     = 3;
}

message WaitingStatus {
	string reason = 1;
}

message RunningStatus {
	string startedAt = 1;
}

message TermStatus {
    int32   exitCode    = 1;
    string  reason      = 2;
    string  message     = 3;
    string  startedAt   = 4;
    string  finishedAt  = 5;
}

message ContainerStatus {
    string name             = 1;
    string containerID      = 2;
    string phase            = 3;
    WaitingStatus waiting   = 4;
    RunningStatus running   = 5;
    TermStatus terminated   = 6;
}

// TODO: embed Container message to avoid repetition
message ContainerInfo {
  string name                       = 1;
  string containerID                = 2;
  string image                      = 3;
  string imageID                    = 4;
  repeated string commands          = 5;
  repeated string args              = 6;
  string workingDir                 = 7;
  repeated ContainerPort ports      = 8;
  repeated EnvironmentVar env       = 9;
  repeated VolumeMount volumeMounts = 10;
  bool tty                          = 11;
  string imagePullPolicy            = 12;
	string podID                      = 13;
	ContainerStatus status            = 14;
}

message Container {
  string name                       = 1;
  string containerID                = 2;
  string image                      = 3;
  string imageID                    = 4;
  repeated string commands          = 5;
  repeated string args              = 6;
  string workingDir                 = 7;
  repeated ContainerPort ports      = 8;
  repeated EnvironmentVar env       = 9;
  repeated VolumeMount volumeMounts = 10;
  bool tty                          = 11;
  string imagePullPolicy            = 12;
}

message RBDVolumeSource {
  repeated string monitors  = 1;
  string image              = 2;
  string fsType             = 3;
  string pool               = 4;
  string user               = 5;
  string keyring            = 6;
  bool readOnly             = 7;
}

message PodVolume {
	string name         = 1;
	string source       = 2;
	string driver       = 3;
	RBDVolumeSource rbd = 4;
}

message PodSpec {
	repeated PodVolume volumes    = 1;
	repeated Container containers = 2;
	map<string,string> labels     = 3;
	int32 vcpu                    = 4;
	int32 memory                  = 5;
}

message PodStatus {
	string phase                              = 1;
	string message                            = 2;
	string reason                             = 3;
	string hostIP                             = 4;
	repeated string podIP                     = 5;
	string startTime                          = 6;
	repeated ContainerStatus containerStatus  = 7;
	string finishTime                         = 8;
}

message PodInfo {
	string kind       = 1;
	string apiVersion = 2;
	string vm         = 3;
	PodSpec spec      = 4;
	PodStatus status  = 5;
}

message ImageInfo {
    string id                   = 1;
    string parentID             = 2;
    repeated string repoTags    = 3;
    repeated string repoDigests = 4;
    int64 created               = 5;
    int64 virtualSize           = 6;
    map<string,string> labels   = 7;
}

////////////////////   PublicAPI Request/Response   ///////////////////////////

message PodInfoRequest {
  string podID = 1;
}

message PodInfoResponse {
  PodInfo podInfo = 1;
}

message PodListRequest {
  string podID = 1;
  string vmID  = 2;
}

message PodListResult {
  string podID    = 1;
  string podName  = 2;
  string vmID     = 3;
  string status   = 4;
}

message PodListResponse {
  repeated PodListResult podList = 1;
}

message ContainerListRequest {
  string podID    = 1;
  string vmID     = 2;
  bool auxiliary  = 3;
}

message ContainerListResult {
  string containerID    = 1;
  string containerName  = 2;
  string podID          = 3;
  string status         = 4;
}

message ContainerListResponse {
  repeated ContainerListResult containerList = 1;
}

message ContainerInfoRequest {
  // container is the name or id of specified container
  string container = 1;
}

message ContainerInfoResponse {
  ContainerInfo containerInfo = 1;
}

message VMListResult {
  string vmID   = 1;
  string podID  = 2;
  string status = 3;
}

message VMListRequest {
  string podID = 1;
  string vmID  = 2;
}

message VMListResponse {
  repeated VMListResult vmList = 1;
}

message ImageListRequest {
  // filterArgs is a JSON-encoded set of filter arguments
  string filterArgs = 1;
  // filter is a shell glob string applied to repository names
  string filter     = 2;
  // all controls whether all images in the graph are filtered, or just the heads
  bool all          = 3;
}

message ImageListResponse {
    repeated ImageInfo imageList = 1;
}

message PodLabelsRequest{
  string podId               = 1;
  bool override              = 2;
  map<string, string> labels = 3;
}

message PodLabelsResponse{
}

// PublicAPI defines the public APIs which are handled over TCP sockets.
service PublicAPI {
    // PodList implements GET /list?item=pod
    rpc PodList(PodListRequest) returns (PodListResponse) {}
    // TODO: PodCreate implements POST /pod/create
    // rpc PodCreate(PodCreateRequest) returns (PodCreateResponse) {}
    // PodInfo implements GET /pod/info
    rpc PodInfo(PodInfoRequest) returns (PodInfoResponse) {}

    // ContainerList implements GET /list?item=container
    rpc ContainerList(ContainerListRequest) returns (ContainerListResponse) {}
    // ContainerInfo implements GET /container/info
    rpc ContainerInfo(ContainerInfoRequest) returns (ContainerInfoResponse) {}

    // ImageList implements GET /images/get
    rpc ImageList(ImageListRequest) returns (ImageListResponse) {}

    // VMList implements GET /list?item=vm
    rpc VMList(VMListRequest) returns (VMListResponse) {}

    // PodLabels implements  POST   /pod/labels
    rpc PodLabels(PodLabelsRequest) returns (PodLabelsResponse) {}

    // TODO: implements  GET    /pod/stats
    // GetPodStats returns `interface{}` instead of `hyperhq/runv/hypervisor/types/stats.go`, needs refactoring

    // TODO: implements  POST   /pod/start
    // TODO: implements  POST   /pod/stop
    // TODO: implements  POST   /pod/kill
    // TODO: implements  POST   /pod/pause
    // TODO: implements  POST   /pod/unpause
    // TODO: implements  DELETE /pod

    // TODO: implements  GET    /container/logs
    // TODO: implements  POST   /container/create
    // TODO: implements  POST   /container/rename
    // TODO: implements  POST   /container/commit
    // TODO: implements  POST   /container/kill
    // TODO: implements  POST   /exec
    // TODO: implements  POST   /attach
    // TODO: implements  POST   /tty/resize
    // TODO: implements  GET    /exitcode

    // TODO: implements  GET    /service/list
    // TODO: implements  POST   /service/add
    // TODO: implements  POST   /service/update
    // TODO: implements  DELETE /service

    // TODO: implements  POST   /image/create
    // TODO: implements  POST   /image/load
    // TODO: implements  POST   /image/push
    // TODO: implements  DELETE /image
    // TODO: implements  POST   /image/build

    // TODO: implements  GET    /_ping
    // TODO: implements  GET    /info
    // TODO: implements  GET    /version
    // TODO: implements  POST   /auth

    // TODO: implements  POST   /vm/create
    // TODO: implements  DELETE /vm
}
